# ML-linear-regression

./: .gitignore  README.md  pyproject.toml
module/: dataset.py
modules/: __init__.py  dataset.py  metric.py  trainer.py  util.py
notebooks/0-data-preparation/: 01-visualize-data.ipynb  02-check-dataset.ipynb  03-check-multicolinearity.ipynb
notebooks/1-implement-training-test/: 01-check-results.ipynb  param.py  train.py
output/: lr_results.pickle
