[tool.poetry]
name = "ml-linear-regression"
version = "0.1.0"
description = ""
authors = ["Kisaragi.Z"]
readme = "README.md"
packages = [{include = "ml_linear_regression"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
