[tool.poetry]
name = "ml-linear-regression"
version = "0.1.0"
description = ""
authors = ["Kisaragi.Z"]
readme = "README.md"
packages = [{include = "ml_linear_regression"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
ipykernel = "^6.17.1"
pathlib = "^1.0.1"
seaborn = "^0.12.1"
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
